Bug#38918 selecting from information_schema.columns is disproportionately slow The problem: table_open_method is not calculated properly if '*' is used in 'select' The fix: added table_open_method calculation for such case